2005-09-10 Dario Massarin <nekkar@libero.it>
        * Now a TransferHandler object is created always bt the TransferFactory.
        This allows to easily reimplement the TransferHandler class, just by
        creating your own class and returning it when the createTransferHandler()
        function gets called.
        * More work on the BTTransferHandler class.
        * The transfer plugins can now provide its details widget that is 
        displayed automatically at the bottom of the TransferDetails widget.
        * Implementation of a first bittorrent details widget. 
        * Note that the bittorrent plugin currently has some problems related 
        to threads. It seems that Qt4 is quite different from Qt3 in these regards.

2005-09-08 Dario Massarin <nekkar@libero.it>
        * Start to implement properly the detailsWidgets for each transfer.
        Now we have a basic widget available with all the plugins and the 
        next step is to add at the bottom of it another widget provided
        by each plugin's factory with the createTransferDetails() function.
        * Start to implement a BTTransferHandler class, reimplementation 
        of the generic TransferHandler class.

2005-09-02 Urs Wolfer <u.wolfer @ bluewin.ch>
        * *Replace the old droptarget icon with the nuvola one

2005-08-31 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Icons in smaller sizes (forwardport)
        * Work on configuration dialogs. Not finished yet.

2005-08-23 Urs Wolfer <u.wolfer @ bluewin.ch>
        * Better KGet mime icon (forwardport)
        * Remove artifacts from images (forwardport)
        * Add action to show / hide drop target
        * Add some actions to maintoolbar (new download, show / hide drop target)
        * Fix a problem with the configuration dialog (wasn't shown the first call)
        * Remove some compiler warnings

2005-08-12 Dario Massarin <nekkar@libero.it>
        * Make the configuration dialogs compile again, but we have to 